# STU-FIIT

./: README.md
AZA/assignment/: README.md  huffman_comp.cpp  huffman_decomp.cpp  scheduling.cpp  scheduling_ds.cpp
DBS/assignment 1/: 1.sql  2.sql  3.sql  4.sql  5.sql  6.sql  README.md
DBS/assignment 3/: README.md  migration.sql  procedures.sql  seed.sql  views.sql
DSA/assignment 6/: README.md  main.c
DSA/assignment 8/: README.md  main.c
MIP/article/: README.md  main.tex  refs.bib
PKS/: main.py
RUST/key manager/backend/: Cargo.toml
RUST/key manager/backend/src/: main.rs  middleware.rs  scheduler.rs
RUST/key manager/backend/src/database/: migration.sql
RUST/key manager/backend/src/models/: claim.rs  key.rs  mod.rs  user.rs
RUST/key manager/backend/src/routes/: auth.rs  keys.rs  users.rs
RUST/key manager/backend/src/services/: email.rs  encryption.rs  mod.rs
RUST/key manager/backend/src/utils/: constants.rs  jwt_token.rs  mod.rs  validation.rs
RUST/key manager/frontend/: Cargo.toml  index.html
RUST/key manager/frontend/src/: main.rs
RUST/key manager/frontend/src/components/: app_router.rs
RUST/key manager/frontend/src/constants/: key_types.rs
RUST/key manager/frontend/src/context/: user_context.rs
RUST/key manager/frontend/src/helpers/: date.rs  error_codes.rs  mod.rs  storage.rs  string_utils.rs
RUST/key manager/frontend/src/models/: key.rs  mod.rs  user.rs
RUST/key manager/frontend/src/pages/: add_key.rs  add_menu.rs  change_pwd.rs  dashboard.rs  expired.rs  key_detail.rs  login.rs  mod.rs  not_found.rs  register.rs  revoked.rs  settings.rs
RUST/key manager/frontend/src/services/: auth.rs  keys.rs
(+169 files in other folders)
