[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.28.0", features = ["full"] }
rocket = { version = "0.5.1", features = ["json"] }
rocket_cors = "0.6"
serde = { version = "1.0.156", features = ["derive"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "macros", "time", "chrono"] }
dotenv = "0.15.0"
bcrypt = "0.17.0"
jsonwebtoken = "9.3.1"
chrono = { version = "0.4.40", features = ["serde"] }
lettre = "0.11.15"
once_cell = "1.21.3"
aes-gcm = "0.10.2"
base64 = "0.21.0"
ring = "0.17.14"
rand = "0.8.5"
ssh-key = { version = "0.6.1", features = ["ed25519", "encryption", "getrandom", "std"] }
hex = "0.4.3"
garde = { version = "0.22", features = ["derive", "email", "regex"] }
serde_json = "1.0.140"
tokio-cron-scheduler = "0.13.0"
dashmap = "6.1.0"
