[package]
name = "frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
yew-router = { git = "https://github.com/yewstack/yew.git" }
web-sys = { version = "0.3", features = ["HtmlInputElement", "Clipboard", "Navigator", "Window", "Blob", "BlobPropertyBag", "Url", "HtmlAnchorElement"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
regex = "1.11.1"
reqwest = { version = "0.11", features = ["json", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-logger = "0.2"
chrono = { version = "0.4.40", features = ["serde"] }
js-sys = "0.3"
